tests/fixtures/invalid/abs_2_args.py
# abs() takes at most 1 argument, got 2
x = abs(1, 1)
